[gd_scene load_steps=3 format=2]

[ext_resource path="res://NetStartMenu.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="NetStartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 964.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 31.0
rect_min_size = Vector2( 200, 30 )
text = "Enter your player name
 "
align = 1

[node name="PlayerName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 230.0
margin_right = 964.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
size_flags_horizontal = 3
size_flags_vertical = 4
max_length = 20
placeholder_text = "Your Name Here"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 57.0
margin_top = 61.0
margin_right = 907.0
margin_bottom = 101.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 30

[node name="BtnServer" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
size_flags_vertical = 3
text = "Start Server"

[node name="BtnClient" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 150.0
margin_right = 270.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
size_flags_vertical = 3
text = "Start Client"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 300.0
margin_top = 5.0
margin_right = 420.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 30 )
text = "Host IP"
align = 2

[node name="TxtHost" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 450.0
margin_right = 650.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
rect_pivot_offset = Vector2( -622, -438 )
text = "192.168.178.56"
max_length = 50
placeholder_text = "127.0.0.1"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 680.0
margin_top = 5.0
margin_right = 740.0
margin_bottom = 35.0
rect_min_size = Vector2( 60, 30 )
text = "Port"
align = 2

[node name="TxtPort" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 770.0
margin_right = 850.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 30 )
rect_pivot_offset = Vector2( -622, -438 )
max_length = 6
placeholder_text = "9000"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/PlayerName" to="." method="_on_PlayerName_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/BtnServer" to="." method="_on_BtnServer_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/BtnClient" to="." method="_on_BtnClient_pressed"]
