[gd_scene load_steps=10 format=2]

[ext_resource path="res://startmenu/NetStartMenu.gd" type="Script" id=1]
[ext_resource path="res://startmenu/DlgCreateProfile.gd" type="Script" id=2]
[ext_resource path="res://startmenu/LocalProfileButton.gd" type="Script" id=3]
[ext_resource path="res://scenes/podest/Podest.tscn" type="PackedScene" id=4]
[ext_resource path="res://startmenu/MenuTheme.tres" type="Theme" id=5]

[sub_resource type="ButtonGroup" id=1]
resource_name = "NetworkGameType"

[sub_resource type="Animation" id=2]
resource_name = "PressOkGlow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LblHint:custom_colors/default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.980392, 0.466667, 0.309804, 1 ), Color( 0.972549, 0.756863, 0.0235294, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LblHint:custom_colors/default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ReadyGlow"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LblHint:custom_colors/default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.027451, 0.882353, 0.141176, 1 ), Color( 0.0117647, 0.666667, 0.0980392, 1 ) ]
}

[node name="NetStartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/separation = 30

[node name="LocalProfiles" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 980.0
margin_bottom = 120.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Label" type="Label" parent="VBoxContainer/LocalProfiles"]
margin_top = 36.0
margin_right = 197.0
margin_bottom = 84.0
rect_min_size = Vector2( 100, 40 )
text = "Select a local profile,
create a new one,
or  press long  to edit a profile."
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/LocalProfiles"]
margin_left = 227.0
margin_right = 980.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3

[node name="LocalProfiles" type="HBoxContainer" parent="VBoxContainer/LocalProfiles/ScrollContainer"]
margin_right = 184.0
margin_bottom = 100.0

[node name="DummyPlayer" type="Button" parent="VBoxContainer/LocalProfiles/ScrollContainer/LocalProfiles"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 3 )

[node name="Col1" type="ColorRect" parent="VBoxContainer/LocalProfiles/ScrollContainer/LocalProfiles/DummyPlayer"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
rect_min_size = Vector2( 80, 40 )
mouse_filter = 1
size_flags_horizontal = 3
color = Color( 0.0745098, 0.87451, 0.407843, 1 )

[node name="Col2" type="ColorRect" parent="VBoxContainer/LocalProfiles/ScrollContainer/LocalProfiles/DummyPlayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -1.0
margin_right = -10.0
margin_bottom = -30.0
mouse_filter = 1
size_flags_horizontal = 3
color = Color( 0.952941, 0.945098, 0.945098, 1 )

[node name="Nickname" type="Label" parent="VBoxContainer/LocalProfiles/ScrollContainer/LocalProfiles/DummyPlayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -30.0
margin_right = -1.0
margin_bottom = -1.0
rect_min_size = Vector2( 80, 30 )
custom_colors/font_color = Color( 0.992157, 0.909804, 0.0313726, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.392157 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 5
text = "<Nickname>"
align = 1
valign = 1

[node name="BtnAdd" type="Button" parent="VBoxContainer/LocalProfiles/ScrollContainer/LocalProfiles"]
margin_left = 104.0
margin_right = 184.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 80 )
focus_neighbour_right = NodePath("../../../../Network/BtnLocal")
text = "+"

[node name="Network" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 980.0
margin_bottom = 190.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 30

[node name="BtnLocal" type="Button" parent="VBoxContainer/Network"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
focus_neighbour_left = NodePath("../../LocalProfiles/ScrollContainer/LocalProfiles/BtnAdd")
focus_neighbour_right = NodePath("../BtnServer")
size_flags_vertical = 3
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Local Game"

[node name="BtnServer" type="Button" parent="VBoxContainer/Network"]
show_behind_parent = true
margin_left = 150.0
margin_right = 270.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
focus_neighbour_left = NodePath("../BtnLocal")
focus_neighbour_right = NodePath("../BtnClient")
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 1 )
text = "Server"

[node name="BtnClient" type="Button" parent="VBoxContainer/Network"]
margin_left = 300.0
margin_right = 420.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
focus_neighbour_left = NodePath("../BtnServer")
focus_neighbour_right = NodePath("../TxtHost")
size_flags_vertical = 3
toggle_mode = true
group = SubResource( 1 )
text = "Client"

[node name="Label" type="Label" parent="VBoxContainer/Network"]
margin_left = 450.0
margin_top = 5.0
margin_right = 570.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 30 )
text = "Host IP"
align = 2

[node name="TxtHost" type="LineEdit" parent="VBoxContainer/Network"]
margin_left = 600.0
margin_right = 800.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
rect_pivot_offset = Vector2( -622, -438 )
focus_neighbour_left = NodePath("../BtnClient")
focus_neighbour_right = NodePath("../TxtPort")
text = "192.168.178.56"
max_length = 50
placeholder_text = "127.0.0.1"

[node name="Label2" type="Label" parent="VBoxContainer/Network"]
margin_left = 830.0
margin_top = 5.0
margin_right = 890.0
margin_bottom = 35.0
rect_min_size = Vector2( 60, 30 )
text = "Port"
align = 2

[node name="TxtPort" type="LineEdit" parent="VBoxContainer/Network"]
margin_left = 920.0
margin_right = 980.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 30 )
rect_pivot_offset = Vector2( -622, -438 )
focus_neighbour_left = NodePath("../TxtHost")
focus_neighbour_top = NodePath("../../LocalProfiles/ScrollContainer/LocalProfiles/BtnAdd")
focus_neighbour_right = NodePath("../BtnLocal")
max_length = 6
placeholder_text = "9000"

[node name="NetworkInfo" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 220.0
margin_right = 980.0
margin_bottom = 260.0

[node name="LblServerStatus" type="Label" parent="VBoxContainer/NetworkInfo"]
margin_top = 13.0
margin_right = 83.0
margin_bottom = 27.0
text = "Server Status"

[node name="ColorServerStatus" type="ColorRect" parent="VBoxContainer/NetworkInfo"]
margin_left = 87.0
margin_right = 327.0
margin_bottom = 40.0
rect_min_size = Vector2( 240, 40 )
color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="ServerStatus" type="Label" parent="VBoxContainer/NetworkInfo/ColorServerStatus"]
margin_left = 18.0
margin_top = 8.0
margin_right = 218.0
margin_bottom = 33.0
rect_min_size = Vector2( 200, 0 )
text = "<None>"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 980.0
margin_bottom = 330.0
custom_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_right = 607.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Press OK to say that you are ready to start the game.
The game starts when all connected players are ready."

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 627.0
margin_right = 760.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Current Input Device
"

[node name="LblCurrentInputDevice" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_left = 780.0
margin_right = 980.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
bbcode_enabled = true
bbcode_text = "[color=grey]None[/color]"
text = "None"

[node name="ConnectedPlayers" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 360.0
margin_right = 980.0
margin_bottom = 560.0
rect_min_size = Vector2( 600, 200 )
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="TemplateViewPortContainer" type="ViewportContainer" parent="VBoxContainer/ConnectedPlayers"]
visible = false
margin_right = 150.0
margin_bottom = 200.0
rect_min_size = Vector2( 150, 200 )

[node name="TemplateViewport" type="Viewport" parent="VBoxContainer/ConnectedPlayers/TemplateViewPortContainer"]
size = Vector2( 150, 200 )
own_world = true
handle_input_locally = false
render_target_update_mode = 0

[node name="Camera" type="Camera" parent="VBoxContainer/ConnectedPlayers/TemplateViewPortContainer/TemplateViewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.40705, 2.46508 )

[node name="Podest" parent="VBoxContainer/ConnectedPlayers/TemplateViewPortContainer/TemplateViewport" instance=ExtResource( 4 )]

[node name="LblHint" type="RichTextLabel" parent="VBoxContainer/ConnectedPlayers/TemplateViewPortContainer"]
anchor_right = 1.0
margin_right = -50.0
margin_bottom = 42.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_horizontal = 3
custom_colors/default_color = Color( 1, 1, 0, 1 )
tab_size = 3
text = "Press OK/Jump
when ready"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/ConnectedPlayers/TemplateViewPortContainer"]
anims/PressOkGlow = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/ReadyGlow = SubResource( 4 )

[node name="DlgCreateProfile" type="WindowDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -114.0
margin_bottom = -218.0
window_title = "Create a new profile"
resizable = true
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="DlgCreateProfile"]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="DlgCreateProfile/VBoxContainer"]
margin_right = 836.0
margin_bottom = 436.0
size_flags_horizontal = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3

[node name="LblNickName" type="Label" parent="DlgCreateProfile/VBoxContainer/GridContainer"]
margin_right = 200.0
margin_bottom = 14.0
text = "Nickname"

[node name="LblFacCol1" type="Label" parent="DlgCreateProfile/VBoxContainer/GridContainer"]
margin_left = 210.0
margin_right = 518.0
margin_bottom = 14.0
text = "Favorite Color #1"

[node name="LblFavCol2" type="Label" parent="DlgCreateProfile/VBoxContainer/GridContainer"]
margin_left = 528.0
margin_right = 836.0
margin_bottom = 14.0
text = "Favorite Color #1"

[node name="Nickname" type="LineEdit" parent="DlgCreateProfile/VBoxContainer/GridContainer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 436.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
max_length = 20
placeholder_text = "<Happy Loser>"

[node name="FavCol1" type="ColorPicker" parent="DlgCreateProfile/VBoxContainer/GridContainer"]
margin_left = 338.0
margin_top = 152.0
margin_right = 646.0
margin_bottom = 564.0
edit_alpha = false
presets_visible = false

[node name="FavCol2" type="ColorPicker" parent="DlgCreateProfile/VBoxContainer/GridContainer"]
margin_left = 656.0
margin_top = 152.0
margin_right = 964.0
margin_bottom = 564.0
edit_alpha = false
presets_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="DlgCreateProfile/VBoxContainer"]
margin_left = 316.0
margin_top = 440.0
margin_right = 520.0
margin_bottom = 470.0
size_flags_horizontal = 4

[node name="BtnOK" type="Button" parent="DlgCreateProfile/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "OK"

[node name="BtnCancel" type="Button" parent="DlgCreateProfile/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "Cancel"

[connection signal="clicked" from="VBoxContainer/LocalProfiles/ScrollContainer/LocalProfiles/DummyPlayer" to="." method="_on_DummyPlayer_clicked"]
[connection signal="long_pressed" from="VBoxContainer/LocalProfiles/ScrollContainer/LocalProfiles/DummyPlayer" to="." method="_on_DummyPlayer_long_pressed"]
[connection signal="long_released" from="VBoxContainer/LocalProfiles/ScrollContainer/LocalProfiles/DummyPlayer" to="." method="_on_DummyPlayer_long_released"]
[connection signal="pressed" from="VBoxContainer/LocalProfiles/ScrollContainer/LocalProfiles/BtnAdd" to="." method="_on_BtnAdd_pressed"]
[connection signal="pressed" from="VBoxContainer/Network/BtnLocal" to="." method="_on_BtnLocal_pressed"]
[connection signal="pressed" from="VBoxContainer/Network/BtnServer" to="." method="_on_BtnServer_pressed"]
[connection signal="pressed" from="VBoxContainer/Network/BtnClient" to="." method="_on_BtnClient_pressed"]
[connection signal="profile_created" from="DlgCreateProfile" to="." method="_on_DlgCreateProfile_profile_created"]
[connection signal="profile_edited" from="DlgCreateProfile" to="." method="_on_DlgCreateProfile_profile_edited"]
[connection signal="pressed" from="DlgCreateProfile/VBoxContainer/HBoxContainer/BtnOK" to="DlgCreateProfile" method="_on_BtnOK_pressed"]
[connection signal="pressed" from="DlgCreateProfile/VBoxContainer/HBoxContainer/BtnCancel" to="DlgCreateProfile" method="_on_BtnCancel_pressed"]
